--- a/package.json
+++ b/package.json
@@ -8,6 +8,9 @@
     "start": "next start"
   },
   "dependencies": {
+    "bootstrap": "^5.0.0-beta1",
+    "express": "^4.17.1",
+    "firebase-admin": "^9.4.2",
     "next": "10.0.3",
     "react": "17.0.1",
     "react-dom": "17.0.1"
