--- a/package.json
+++ b/package.json
@@ -13,6 +13,8 @@
     "firebase-admin": "^9.4.2",
     "next": "10.0.3",
     "react": "17.0.1",
-    "react-dom": "17.0.1"
+    "react-bootstrap": "^1.4.0",
+    "react-dom": "17.0.1",
+    "react-hook-form": "^6.13.1"
   }
 }
